After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733003 - rtspsrc: memleak, missing gst_query_unref
rtspsrc: memleak, missing gst_query_unref
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.3.90
Other Linux
: Normal normal
: 1.3.91
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-07-10 13:38 UTC by m][sko
Modified: 2014-07-10 16:21 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description m][sko 2014-07-10 13:38:43 UTC
http://cgit.freedesktop.org/gstreamer/gst-plugins-good/tree/gst/rtsp/gstrtspsrc.c#n2318

2 x missing 
gst_query_unref(query)
before return
Comment 1 Nicolas Dufresne (ndufresne) 2014-07-10 14:09:35 UTC
Want to provide a patch ?
Comment 2 m][sko 2014-07-10 14:14:53 UTC
no
Comment 3 Tim-Philipp Müller 2014-07-10 16:21:37 UTC
Thanks, should be fixed now:

commit c2614e525345830effa2b330323192213991e1df
Author: Tim-Philipp Müller <tim@centricular.com>
Date:   Thu Jul 10 17:19:42 2014 +0100

    rtspsrc: fix query leak
    
    https://bugzilla.gnome.org/show_bug.cgi?id=733003