rtspsrc: fix query leak

https://bugzilla.gnome.org/show_bug.cgi?id=733003